--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+    <button id="bt1">Rock</button>
+    <button id="bt2">Paper</button>
+    <button id="bt3">Scissor</button>
+    <div class="result"></div>
+</div>
     <script src="app.js"></script>
 </body>
 </html>
